// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen handles failed login 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Text
    style={
      {
        "color": "#401201",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Welcome Back!
  </Text>
  <View
    style={
      {
        "marginBottom": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Email"
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value="test@example.com"
      />
    </View>
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value="wrongpassword"
      />
    </View>
  </View>
  <Text
    style={
      {
        "color": "red",
        "marginBottom": 10,
      }
    }
  >
    Invalid credentials
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D9C3A9",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "marginBottom": 10,
          "width": "60%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#260101",
            "fontSize": 18,
            "fontWeight": "bold",
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Didn't have an account?
    </Text>
  </View>
</View>
`;

exports[`LoginScreen handles successful login 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Text
    style={
      {
        "color": "#401201",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Welcome Back!
  </Text>
  <View
    style={
      {
        "marginBottom": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Email"
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D9C3A9",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "marginBottom": 10,
          "width": "60%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#260101",
            "fontSize": 18,
            "fontWeight": "bold",
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Didn't have an account?
    </Text>
  </View>
</View>
`;

exports[`LoginScreen navigates to Register screen 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Text
    style={
      {
        "color": "#401201",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Welcome Back!
  </Text>
  <View
    style={
      {
        "marginBottom": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Email"
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D9C3A9",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "marginBottom": 10,
          "width": "60%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#260101",
            "fontSize": 18,
            "fontWeight": "bold",
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Didn't have an account?
    </Text>
  </View>
</View>
`;

exports[`LoginScreen renders login screen correctly (snapshot) 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Text
    style={
      {
        "color": "#401201",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Welcome Back!
  </Text>
  <View
    style={
      {
        "marginBottom": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Email"
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        {
          "borderBottomColor": "#401201",
          "borderBottomWidth": 1,
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          {
            "fontSize": 16,
            "height": 50,
            "paddingHorizontal": 10,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D9C3A9",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "marginBottom": 10,
          "width": "60%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#260101",
            "fontSize": 18,
            "fontWeight": "bold",
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Didn't have an account?
    </Text>
  </View>
</View>
`;
